# ros_2025

./: .env.sample  .gitignore  .gitmodules  README.md  architecture.md  check_setup.sh  cleanup.sh  end.txt  initialize.sh  intera.sh  intera_commands.txt  make_executable.sh  quick_test.sh  setup.sh  setup_permissions.sh  start_system.sh  test.sh
example_scripts/apriltag_detector/: CMakeLists.txt  package.xml
example_scripts/apriltag_detector/launch/: apriltag_detector.launch  detect_apriltags.launch
example_scripts/apriltag_detector/scripts/: apriltag_detector.py
example_scripts/custom_scripts/: DO_NOT_INCLUDE_SURF_TEST_IN_REPO.txt  package.xml
example_scripts/custom_scripts/archived_sessions/test/: log.json
example_scripts/custom_scripts/python3_scripts/: gpt_imagecall_py3.py  speech_rec_py3.py  speech_rec_server_py3.py
example_scripts/custom_scripts/scripts/: archive_session.py  close_gripper.py  error_listener.py  goto_square.py  goto_table_neutral.py  gpt_imagecall.py  grab.py  instruction_executor copy.py  instruction_executor.py  light_off.py  light_on.py  move_arm_for_photo.py  open_gripper.py  place.py  realsense_image.py  speak_gpt_response.py  speech_to_text_base.py  speech_to_text_server.py  speech_to_text_subprocess.py  take_photo.py  take_photo_and_publish.py  text_user_input.py
example_scripts/custom_scripts/transcripts/: log.json  startup_2_5_few.json  startup_2_5_zero.json  startup_2_6_few.json  startup_2_6_one.json  startup_2_6_zero.json  transcription.txt
example_scripts/first_task/: CMakeLists.txt  package.xml  typescript
example_scripts/first_task/launch/: first_task.launch
example_scripts/first_task/scripts/: first_task.py  move_sawyer.py  rotate_camera.py
example_scripts/first_task/src/: take_photo.py
example_scripts/gspeech-master/: CMakeLists.txt
example_scripts/gspeech-master/src/: gspeech.py  recognize.py
example_scripts/realsense_sawyer_integration/: CMakeLists.txt  package.xml
example_scripts/realsense_sawyer_integration/src/: realsensecall.py
src/: .rosinstall  .rosinstall.bak  README.md
src/audio/: CMakeLists.txt  package.xml
src/audio/src/scripts/: speak_gpt.py  speech_bridge.py  speech_recognition.py
src/gpt_vision/: CMakeLists.txt  package.xml
src/gpt_vision/config/: camera_params.yaml
src/gpt_vision/src/scripts/: collect_photos.py  get_gpt_response.py  grid_state_publisher.py  move_arm_for_photo.py  take_photo.py  vision_processing.py
src/gpt_vision/src/test_images/: test_labels.csv
src/launch/: full_system.launch
src/robot_action/: CMakeLists.txt  package.xml
src/robot_action/launch/: test_system.launch
src/robot_action/src/scripts/: act_gpt.py  close_gripper.py  error_monitor.py  goto_table_neutral.py  open_gripper.py  test_sequence.py
