<?xml version="1.0"?>
<package format="2">
  <name>gpt_vision</name>
  <version>0.0.0</version>
  <description>The gpt_vision package for robot vision and GPT integration</description>

  <maintainer email="vishnu@todo.todo">vishnu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-openai</exec_depend>
  <exec_depend>python3-tensorflow</exec_depend>

  <export>
  </export>
</package>
